Fix some spacing issues with the header and shortcuts. #865

--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -395,6 +395,7 @@ nav a,
   font-size: 0;
   color: transparent;
 }
+#full-board-list,
 .hide-navigation-decorations #board-list a {
   margin: 0 .1em;
 }
@@ -537,7 +538,10 @@ nav a,
   <%= order %>: 10;
 }
 #a-stats {
-  height: 1.1em;
+  padding: 1px 2px;
+}
+#shortcuts #a-stats {
+  padding: 0 2px;
 }
 .sidebar-location-right #shortcuts {
   right: 0;
@@ -545,15 +549,9 @@ nav a,
 .sidebar-location-left #shortcuts {
   left: 0;
 }
-.sidebar-location-right .shortcut {
-  <%= align %>-self: flex-end;
-}
 .icon-orientation-vertical #a-icons {
   <%= flex %>-direction: column;
   height: 200px;
-}
-.icon-orientation-horizontal #a-stats {
-  height: 1em;
 }
 .icon-orientation-horizontal #a-stats,
 .icon-orientation-horizontal #a-icons,
@@ -644,6 +642,7 @@ nav a,
   content: "";
   opacity: 0.5;
   cursor: pointer;
+  <%= align %>: flex-start;
 }
 .invisible-icons .a-icon,
 .invisible-icons #shortcuts .fa {
